--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,4 @@
 <form action='/name' method='post'>
-  <label for='player_name'>Name: </label>
-  <input type='text' id='player_name' name='player_name' placeholder='Enter name...'>
-  <button type='submit'>Register</button>
+  <input type='text' name='name' value='' />
+  <input type='submit' value='Submit' />
 </form>
